# YtFlowApp

./: .clang-format  .gitignore  .gitmodules  App.xaml  Cargo.toml  Package.appxmanifest  README.md  YtFlow.sln  YtFlowApp.sln  azure-pipelines.yml  rust-toolchain.toml
.cargo/: config.toml  publish.config.toml
ConfigEncoding/: ConfigEncoder.cs  IConfigDecoder.cs
Pages/: AboutPage.xaml.cs  ConfigPage.xaml  ConfigPage.xaml.cs  SettingPage.xaml
Selectors/: ConnectionStatusSelector.cs
Utils/: ConfigUtils.cs
YtFlowApp/: AboutPage.cpp  AboutPage.h  AboutPage.xaml  App.cpp  App.h  App.idl  App.xaml  App.xaml.cs  AssetModel.cpp  AssetModel.h  BoolTemplateSelector.cpp  BoolTemplateSelector.h  BoolToFontWeightConverter.cpp  BoolToFontWeightConverter.h  BoolToObjectConverter.cpp  BoolToObjectConverter.h  ConnectionState.cpp  ConnectionState.h  CoreFfi.cpp  CoreFfi.h  CoreProxy.cpp  CoreProxy.h  CoreProxyImpl.h  CoreRpc.cpp  CoreRpc.h  CoreSubscription.cpp  CoreSubscription.h  Directory.Build.props  Directory.Build.targets  DynOutboundHomeWidget.cpp  DynOutboundHomeWidget.h  DynOutboundHomeWidget.xaml  DynOutboundProxyModel.cpp  DynOutboundProxyModel.h  EditPluginModel.cpp  EditPluginModel.h  EditPluginTreeViewItemTemplateSelector.cpp  EditPluginTreeViewItemTemplateSelector.h  EditProfilePage.cpp  EditProfilePage.h  (+96 more)
YtFlowTasks/: AdapterIListConverter.cs  HttpUtils.cs  TrafficUsage.cs  YtFlowTasks.csproj
YtFlowVpnTask/: VpnTask.cpp  (+6 more)
ytflow-core-wrapper/: Cargo.toml
ytflow-core-wrapper/src/: error.rs  lib.rs  storage_resource_loader.rs  tun_plugin.rs  vpn_plugin.rs
(+81 files in other folders)
